alignment issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,7 +38,7 @@
 
 .title-links{
     text-align:left;
-    margin-left:4%;
+    margin-left:2.5%;
 
     text-transform:uppercase;
     font-size:0.98em;
@@ -104,7 +104,7 @@ a.title-link{
 
 }
 .subheader-links{
-    margin-left:$spacing-unit;
+    margin-left:16px;
     
 }
 .subheader-links a{
